...
        floatingActionButton = {
            FloatingActionButton(
                onClick = { viewModel.onEvent(DetailEvent.HabitSave) },
                containerColor = MaterialTheme.colorScheme.primary,
                shape = CircleShape
            ) {
                Icon(imageVector = Icons.Default.Check, contentDescription = "Create habit",
                    tint = MaterialTheme.colorScheme.tertiary)
            }
        }
    ){
        Column(
            modifier = Modifier
...
                keyboardOptions = KeyboardOptions(
                    autoCorrectEnabled = false,
                    imeAction = ImeAction.Done
                ), keyboardActions = KeyboardActions(
                    onAny = { viewModel.onEvent(DetailEvent.HabitSave) }
                ),
                contentDescription = "Enter habit name"
            )
            DetailFrequency(
                selectedDays = state.frequency,
                onFrequencyChange = { viewModel.onEvent(DetailEvent.FrequencyChange(it)) }
            )
            DetailReminder(
...
