...
) {
    val state = viewModel.state
    Scaffold(
        modifier = Modifier.fillMaxSize(),
        topBar = {
            CenterAlignedTopAppBar(
                title = { Text(text = "Home") },
                navigationIcon = {
                    IconButton(
                        onClick = { onSettings() }
                    ) {
                        Icon(imageVector = Icons.Default.Settings, contentDescription = "settings")
                    }
...
